// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative handler/api/apipb/*.proto

syntax = "proto3";
package apipb; 

import "handler/api/apipb/message.proto";

option go_package = "./apipb";


service StorageService {
    rpc UploadObject(stream UploadRequest) returns (UploadResponse);
    rpc DownloadObject(DownloadRequest) returns (stream DownloadResponse);
    rpc DeleteObject(DeleteRequest) returns (DeleteResponse);

    rpc ShareObject(ShareObjectRequest) returns (ShareObjectResponse) ;
    rpc DownloadSharedObject(DownloadSharedRequest) returns (stream DownloadResponse);

    rpc ListObject(ListObjectRequest) returns (stream ListObjectResponse);

    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc BasicAuth(BasicAuthRequest) returns (BasicAuthResponse);
    rpc TokenAuth(TokenAuthRequest) returns (TokenAuthResponse);

}